--- a/sampleCountry/src/main/webapp/WEB-INF/web.xml
+++ b/sampleCountry/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,26 @@
     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
     id="WebApp_ID" version="3.1">
+    <!-- <context-param>
+    <param-name>DBUSER</param-name>
+    <param-value>root</param-value>
+  </context-param>
+  <context-param>
+    <param-name>DBPWD</param-name>
+    <param-value></param-value>
+  </context-param>
+  <context-param>
+    <param-name>DBURL</param-name>
+    <param-value>jdbc:mysql://localhost:3306/countries</param-value>
+  </context-param> -->
+  <!-- <servlet>  
+<servlet-name>country</servlet-name>  
+<servlet-class>countryGetall</servlet-class>  
+</servlet>  
+<servlet-mapping>  
+<servlet-name>country</servlet-name>  
+<url-pattern>/country</url-pattern>  
+</servlet-mapping>  -->
   <display-name>Archetype Created Web Application</display-name>
   <welcome-file-list>  
    <welcome-file>index.jsp</welcome-file>   
